[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scenes/NPC/Zombie/Zombie.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Hitbox/HitboxComponent.tscn" type="PackedScene" id=14]
[ext_resource path="res://Sprites/Zombie/Zombie.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 24 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("State:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "ATTACK" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "AttackRange_hit_enemies"
} ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("State:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "CHASE" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 1 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("State:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "DED" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("State:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "IDLE" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 1 ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "ATTACK"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "CHASE"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "DIE"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "IDLE"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "STAGGER"

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2
auto_advance = true
advance_condition = "enemy == null"

[sub_resource type="AnimationNodeStateMachine" id=21]
states/ATTACK/node = SubResource( 7 )
states/ATTACK/position = Vector2( 461, 104 )
states/CHASE/node = SubResource( 8 )
states/CHASE/position = Vector2( 237, 104 )
states/DIE/node = SubResource( 9 )
states/DIE/position = Vector2( 461, -23 )
states/IDLE/node = SubResource( 10 )
states/IDLE/position = Vector2( 237, -23 )
states/STAGGER/node = SubResource( 11 )
states/STAGGER/position = Vector2( 35, -23 )
transitions = [ "IDLE", "CHASE", SubResource( 12 ), "CHASE", "IDLE", SubResource( 13 ), "IDLE", "DIE", SubResource( 14 ), "CHASE", "DIE", SubResource( 15 ), "CHASE", "ATTACK", SubResource( 16 ), "ATTACK", "IDLE", SubResource( 17 ), "IDLE", "STAGGER", SubResource( 18 ), "CHASE", "STAGGER", SubResource( 19 ), "STAGGER", "IDLE", SubResource( 20 ) ]
start_node = "IDLE"
end_node = "DIE"
graph_offset = Vector2( -90, -97 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=22]

[sub_resource type="CircleShape2D" id=23]
radius = 8.7134

[sub_resource type="CircleShape2D" id=24]
radius = 250.11

[node name="Zombie" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -20 )
texture = ExtResource( 19 )
hframes = 4
vframes = 4

[node name="MeleeRange" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/MeleeRange"]
position = Vector2( 8, 4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ATTACK = SubResource( 2 )
anims/CHASE = SubResource( 3 )
anims/DIE = SubResource( 4 )
anims/IDLE = SubResource( 5 )
anims/STAGGER = SubResource( 6 )

[node name="StateMachine" type="AnimationTree" parent="."]
tree_root = SubResource( 21 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 22 )
"parameters/conditions/enemy == null" = false

[node name="State" type="Label" parent="."]
visible = false
margin_left = -20.1815
margin_top = -51.2946
margin_right = 19.8185
margin_bottom = -37.2946
text = "IDLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldCollision" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 23 )

[node name="DetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 24 )

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = -24.6942
margin_top = -68.4702
margin_right = 25.3058
margin_bottom = -54.4702
step = 1.0
value = 100.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitboxComponent" parent="." instance=ExtResource( 14 )]
visible = false
position = Vector2( 0, -17 )

[connection signal="area_entered" from="Sprite/MeleeRange" to="." method="_on_MeleeRange_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_DetectionArea_body_exited"]
[connection signal="on_hit" from="HitboxComponent" to="." method="_on_HitboxComponent_on_hit"]
